2007-11-24 Matthias Trute <mtrute@users.sourceforge.net>
	* imported most of the historical code from cvs to svn repository.

2007-11-20 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-ga.c: fixed wrong milli-second format for INFO GA (was
	e.g. »x.6« instead of »x.006«)

2007-11-20 Matthias Trute <mtrute@users.sf.net>
	* renamed getGL/setGL to cacheGetGL/cacheSetGL

2007-11-19 Frank Schmischke <frank.schmischke@t-online.de>
	* config-srcp.c: add 115200 as value for speed for LI101F (Lenz)
	* srcpd.conf.5: add sections for general, Lenz, Intellibox and HSI-88
	* li100.c,ib.c,hsi88.c: change »p_time« to »fb_delay_time_0«

2007-11-19 Guido Scholz <guido.scholz@bayernline.de>
	* netserver.c: fixed not closed info socket; prevents srcpd from
	eating socket resources
	* ib.c: fixed not closed file descriptor of serial device;
	prevents ib module from eating file descriptors

2007-10-28 Guido Scholz <guido.scholz@bayernline.de>
	* srcpd.c: fixed daemonization, process now is detached from
	controlling terminal properly
	* Changelog: reformated

2007-08-18 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcp.c: disabled writing to 'stderr' during normal
	operation, this fixes broken debian package updates and srcpd
	misbehavior in SuSEs runlevel editor

2007-05-23 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-ga.c: fixed microsecond value for GA initialization

2007-01-25 Matthias Trute <mtrute@users.sf.net>
	* ddl.c: fixed »switch power on« bug for DDL module

2006-02-08 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-power.c: added info message for power change

2006-01-25 Matthias Trute <mtrute@users.sf.net>
	* loconet: added MS100 code,
	basic GA Support for LocoIO

2006-01-05 Matthias Trute <mtrute@users.sf.net>
	* loconet.*: Feedback Sensors and basic loconet communication via
	loconbuffer implemented
	* srcp-session.* and srcp-sm.*: Support for SM GET/SET (still not
	working)

2006-01-03 Frank Schmischke <frank.schmischke@t-online.de>